# package-manager

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  pytest.ini  tasks.py
examples/: pyproject.toml
examples/basic/: proman.json  pyproject.toml
packaging/: __init__.py  cli.py  config.py  instance.py  package_manager.py  source_tree.py
pkgmgr/: __init__.py  __main__.py  _path.py  cli.py  config.py  configuration.py  dependencies.py  distributions.py  local.py  package_manager.py  repository.py
proman_dependencies/: __init__.py  __main__.py  _startup.py  cli.py  config.py  dependencies.py  distributions.py  manifest.py  package_manager.py
proman_packaging/: __init__.py  cli.py  config.py  dependencies.py  distributions.py  exception.py  package_manager.py  source_tree.py
proman_pkgmgr/: __init__.py  cli.py  config.py  dependencies.py  distributions.py  exceptions.py  instance.py  package_manager.py  source_tree.py
src/dependencies/: __init__.py  dependencies.py  exception.py  package_manager.py
src/proman/dependencies/: __init__.py  __main__.py  cli.py  config.py  dependencies.py  distributions.py  exception.py  package_manager.py
src/proman/package_manager/: __init__.py  __main__.py  cli.py  dependencies.py  distributions.py  package_manager.py
tasks/: build.py  doc.py  qa.py
tests/: test_package.py  test_version.py  utils.py
tests/distributions/: pyproject.toml  test_local_distribution.py
tests/lock_manager/: proman-lock.json  proman.json  test_lock_manager.py  test_lock_manager.py.bak
tests/scm/: test_submodule.py.bak
tests/source_tree_manager/: pyproject.toml  test_source_tree_manager.py  test_source_tree_manager.py.bak
