[tool.poetry]
name = "proman-packaging"
version = "0.1.1-dev3"
description = "Simple package manager for Python."
authors = ["Jesse P. Johnson <jpj6652@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
urllib3 = {extras = ["certifi"], version = "^1.25.10"}
distlib = "^0.3.1"
argufy = "^0.1.2-dev.1"
compendium = {extras = ["toml"], version = "^0.1.1-dev.68"}
build = "^0.3.1"
mypy-extensions = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
pydocstyle = "^5.0.2"
docstr-coverage = "^1.2.0"
pytest-cov = "^2.10.0"
isort = "^4.3.21"
bandit = "^1.6.2"
safety = "^1.9.0"
mkdocs = "^1.1.2"
bump2version = "^1.0.0"
invoke = "^1.4.1"
mkdocs-material = "^5.4.0"
pyinstaller = "^4.0"
cython = "^0.29.21"
mypy = "^0.812"
flit = "^3.2.0"
pyfakefs = "^4.4.0"

[tool.flit.metadata]
module = "proman_packaging"
author = "Jesse P. Johnson"
author-email = "jpj6652@gmail.com"
home-page = "https://github.com/python-proman/proman-packaging"
requires = ["argufy", "compendium", "distlib", "mypy-extensions", "urllib3"]

classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.flit.scripts]
pkg = "proman_packaging.__main__:main"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vagrant
    | _build
    | dist
  )
)
'''
