[tool.poetry]
name = "proman-dependencies"
version = "0.1.1-dev3"
description = "Simple package manager for Python."
authors = ["Jesse P. Johnson <jpj6652@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
urllib3 = {extras = ["certifi"], version = "^1.25.10"}
distlib = "^0.3.1"
argufy = "^0.1.2-dev.1"
compendium = {extras = ["toml"], version = "^0.1.1-dev.68"}
build = "^0.3.1"
mypy-extensions = "^0.4.3"
packaging = "^21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
pydocstyle = "^5.0.2"
docstr-coverage = "^1.2.0"
pytest-cov = "^2.10.0"
isort = "^5.9.2"
bandit = "^1.6.2"
safety = "^1.9.0"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.0"
mkdocstrings = "^0.15.2"
bump2version = "^1.0.0"
invoke = "^1.4.1"
pyinstaller = "^4.0"
cython = "^0.29.21"
mypy = "^0.910"
flit = "^3.2.0"
pyfakefs = "^4.5.0"
black = "^21.7b0"

[tool.poetry.scripts]
bump = "proman_dependencies.__main__:main"

[tool.flit.metadata]
module = "proman_dependencies"
author = "Jesse P. Johnson"
author-email = "jpj6652@gmail.com"
home-page = "https://github.com/python-proman/proman-dependencies"
requires = ["argufy", "compendium", "distlib", "mypy-extensions", "urllib3"]

classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.flit.scripts]
pkg = "proman_dependencies.__main__:main"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vagrant
    | _build
    | dist
  )
)
'''

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:invoke.*:",
    "ignore::DeprecationWarning:_yaml.*:",
]

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
