[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "proman-dependencies"
version = "0.1.1.dev4"
description = "Simple package manager for Python."
authors = ["Jesse P. Johnson <jpj6652@gmail.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    {include = "proman", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.6.2"
urllib3 = {extras = ["certifi"], version = "^1.25.10"}
distlib = "^0.3.1"
mypy-extensions = "^0.4.3"
packaging = "^21.0"
proman-common = {version = "^0.1.1-alpha.1", allow-prereleases = true}
argufy = "^0.1.2-alpha.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pydocstyle = "^5.0.2"
docstr-coverage = "^1.2.0"
pytest-cov = "^2.10.0"
isort = "^5.9.2"
bandit = "^1.6.2"
safety = "^1.9.0"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.0"
mkdocstrings = "^0.15.2"
invoke = "^1.4.1"
mypy = "^0.910"
pyfakefs = "^4.5.0"
black = "^21.7b0"
proman-versioning = "^0.5.0-alpha.2"
pytest = "^6"
build = "^0.7.0"

[tool.poetry.scripts]
pkg = "proman.dependencies.__main__:main"

[[tool.proman.versioning.files]]
filepath = "pyproject.toml"
pattern = "version = \"${version}\""

[[tool.proman.versioning.files]]
filepath = "src/proman/dependencies/__init__.py"
pattern = "__version__ = '${version}'"

[[tool.proman.versioning.files]]
filepath = "tests/test_version.py"
pattern = "__version__ == '${version}'"

[tool.pydocstyle]
ignore = [
    "D203",
    "D213",
    "D300"
]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.black]
line-length = 79
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vagrant
    | _build
    | dist
  )
)
'''

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:invoke.*:",
    "ignore::DeprecationWarning:_yaml.*:",
]

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
